Update LuckPerms API (Fixes #1)

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: RedDisplayName
 version: '${minecraft.plugin.version}'
+api-version: '1.13'
 main: de.redstoneworld.reddisplayname.RedDisplayName
 softdepend: [LuckPerms]
 authors: [Phoenix616]
